<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.TaskListFragment"
    android:id="@+id/coordinator_fragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lbl_no_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:visibility="gone"
        style="@style/MaterialTextViewStyle"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_tasks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="88dp"
        tools:itemCount="5"
        tools:listitem="@layout/item_task" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_task"
        android:layout_width="56dp"
        android:layout_height="56dp"
        style="@style/FloatingActionButtonStyle"
        android:contentDescription="@string/fab_description" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>