<resources>
    <string name="app_name">Todoc</string>

    <string name="label_action_filter">Filter</string>

    <!-- Sort options -->
    <string name="sort_alphabetical">A -&gt; Z</string>
    <string name="sort_alphabetical_invert">Z -&gt; A</string>
    <string name="sort_oldest_first">Les plus anciens d’abord</string>
    <string name="sort_recent_first">Les plus récents d’abord</string>
    <string name="sort_projects">Par projet</string>

    <!-- TaskDialog -->
    <string name="add_task">Ajouter une tâche</string>
    <string name="task_name_hint">Nom de la tâche</string>
    <string name="add">Ajouter</string>

    <!-- UpdateTaskDialog -->
    <string name="update_task">Modifier une tâche</string>
    <string name="ok">OK</string>
    <string name="cancel">ANNULER</string>

    <!-- TaskFragment background -->
    <string name="no_task">Tu n’as aucune tâche à traiter</string>

    <string name="empty_task_name">Le nom de la tâche doit être renseigné</string>

    <!-- SnackBar -->
    <string name="snack_btn">Annuler</string>
    <string name="snack_txt">Tâche supprimée</string>

    <!-- Name projects -->
    <string name="project_tartampion">Projet Tartampion</string>
    <string name="project_lucidia">Projet Lucidia</string>
    <string name="project_circus">Projet Circus</string>

    <!-- FloatingActionButton -->
    <string name="fab_description">Ajouter une tâche</string>

</resources>
