<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:id="@+id/item_layout">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_project"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:src="@drawable/bkg_oval"
        tools:tint="@sample/tasks.json/data/backgroundTint"
        style="@style/AppCompatImageViewStyle"/>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_delete"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_delete"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        app:tint="@color/app_compat_img_tint"
        style="@style/AppCompatImageViewStyle"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/img_delete"
        android:layout_toEndOf="@+id/img_project"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lbl_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            tools:text="@sample/tasks.json/data/taskName"
            style="@style/MaterialTextViewItemStyle"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lbl_project_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            tools:text="@sample/tasks.json/data/projectName"
            style="@style/MaterialTextViewItemStyle"/>

    </LinearLayout>
</RelativeLayout>